after editing all files

--- a/platforms/browser/www/login/index.html
+++ b/platforms/browser/www/login/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 	<meta charset="UTF-8">
-	<title>Unlawfulness Curbing</title>  
+	<title>watchMe</title>  
 	<link rel="stylesheet" href="../css/loginstyle.css">  
 </head>
 
@@ -10,7 +10,7 @@
  <script type="text/javascript" src="../js/myscript.js"></script> 
 	<div class="container">  
 		<form id="contact">
-			<center><h2>Login</h2></center>
+			<center><h2>WatchMe Login</h2></center>
 			<fieldset>
 				<input placeholder="Username" name="uname" id="unme" type="text" tabindex="1" required>
 			    <span style="color:red" class="error" id="usererror">
@@ -22,7 +22,7 @@
 			<fieldset>
 				<button name="login" type="button" id="loginSubmit" onclick="loginAsUser()">Submit</button>
 			</fieldset>
-			<a href="../index.html" style="text-align:center">Sign Up</a>
+			<a href="../index.html" style="text-align:center">GO TO SIGN UP</a>
 		</form>
 	</div>
     
